Fix spacing on donation upsell

--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -58,10 +58,17 @@ form ul li
     &:last-child
       margin-right: 0
 
+.paired.element
+  input
+    width: 75%
+  input[type=submit]
+    width: auto
+    float: right
+
 .code textarea
   height: 16em
-  
-      
+
+
 .date_field
   input
     width: 100px
